// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializing when pending breakpoints exist in prefs syncs pending breakpoints 1`] = `
Object {
  "http://localhost:8000/examples/bar.js:5:": Object {
    "astLocation": Object {
      "index": 0,
      "name": undefined,
      "offset": Object {
        "line": 5,
      },
    },
    "condition": null,
    "disabled": false,
    "generatedLocation": Object {
      "column": undefined,
      "line": 5,
      "sourceUrl": "http://localhost:8000/examples/bar.js",
    },
    "hidden": false,
    "location": Object {
      "column": undefined,
      "line": 5,
      "sourceUrl": "http://localhost:8000/examples/bar.js",
    },
  },
}
`;

exports[`invalid breakpoint location a corrected corresponding pending breakpoint is added 1`] = `
Object {
  "astLocation": Object {
    "index": 0,
    "name": undefined,
    "offset": Object {
      "line": 7,
      "sourceId": "foo.js",
      "sourceUrl": "http://localhost:8000/examples/foo.js",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "location": Object {
    "column": undefined,
    "line": 7,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "log": false,
}
`;

exports[`when adding breakpoints a corresponding pending breakpoint should be added 1`] = `
Object {
  "astLocation": Object {
    "index": 0,
    "name": undefined,
    "offset": Object {
      "line": 5,
      "sourceId": "foo.js",
      "sourceUrl": "http://localhost:8000/examples/foo.js",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo.js",
  },
  "log": false,
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 1`] = `
Object {
  "astLocation": Object {
    "index": 0,
    "name": undefined,
    "offset": Object {
      "line": 5,
      "sourceId": "foo",
      "sourceUrl": "http://localhost:8000/examples/foo",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo",
  },
  "log": false,
}
`;

exports[`when adding breakpoints adding and deleting breakpoints add a corresponding pendingBreakpoint for each addition 2`] = `
Object {
  "astLocation": Object {
    "index": 0,
    "name": undefined,
    "offset": Object {
      "line": 5,
      "sourceId": "foo2",
      "sourceUrl": "http://localhost:8000/examples/foo2",
    },
  },
  "condition": null,
  "disabled": false,
  "generatedLocation": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
  "location": Object {
    "column": undefined,
    "line": 5,
    "sourceUrl": "http://localhost:8000/examples/foo2",
  },
  "log": false,
}
`;
